✨ feat: 添加图标和隐藏主页提示配置，文本域可一键清空，修复配置读取异常，

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,9 @@
     "allowJs": true,
     "types": [
       "utools-api-types"
-    ]
+    ],
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
   "include": [
     "src/**/*.vue",
