--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "4.x",
+    "lodash": "^4.17.21",
     "vue": "^3.4.19"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^5.1.1",
     "@vitejs/plugin-vue": "^5.0.4",
     "utools-api-types": "^5.2.0",
-    "vite": "^5.1.4"
+    "vite": "^5.4.11"
   }
 }
