--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
-    "ant-design-vue": "4.x",
+    "ant-design-vue": "~4.2.6",
     "lodash": "^4.17.21",
-    "vue": "^3.4.19"
+    "pinia": "^3.0.4",
+    "pinia-plugin-persistedstate": "^4.7.1",
+    "vue": "^3.5.24"
   },
   "devDependencies": {
-    "@rollup/plugin-alias": "^5.1.1",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "utools-api-types": "^5.2.0",
-    "vite": "^5.4.11"
+    "@rollup/plugin-alias": "^6.0.0",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "utools-api-types": "^7.2.0",
+    "vite": "^7.2.2",
+    "vite-plugin-vue-devtools": "^8.0.3"
   }
 }
